--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row fixer">
 
       <div type="button" id="yellow" class="btn yellow">
 
