--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
-    <button type="button" class="btn btn-success">S T A R T</button>
+  <h1 id="level-title">Press A Key to Start/Tap Anywhere </h1>
   <div class="container">
     <div lass="row">
-
       <div type="button" id="green" class="btn green">
 
       </div>
@@ -24,7 +22,7 @@
       </div>
     </div>
 
-    <div class="row fixer">
+    <div class="row">
 
       <div type="button" id="yellow" class="btn yellow">
 
