--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <button value="w" id="level-title">Press A Key to Start</button>
   <div class="container">
-    <div lass="row">
+    <div class="row">
 
       <div type="button" id="green" class="btn green">
 
