--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <button value="w" id="level-title">Press A Key to Start</button>
+  <button value="w" id="level-title">Press A Key to Start/Tap on me</button>
   <div class="container">
     <div class="row">
 
